--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ terraform/backend.tf
 terraform/.terraform.lock.hcl
 terraform/.terraform/modules/modules.json
 terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.40.0/linux_amd64/terraform-provider-aws_v5.40.0_x5
+.terraform/providers/registry.terraform.io/hashicorp/aws/5.40.0/linux_amd64/terraform-provider-aws_v5.40.0_x5
