--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ terraform/.terraform.lock.hcl
 terraform/.terraform/modules/modules.json
 terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.40.0/linux_amd64/terraform-provider-aws_v5.40.0_x5
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.40.0/linux_amd64/terraform-provider-aws_v5.40.0_x5
+.terraform/providers/registry.terraform.io/hashicorp/aws/5.41.0/linux_amd64/terraform-provider-aws_v5.41.0_x5
+terraform.tfstate
+.gitignore
+terraform.tfstate.backup
+.terraform/terraform.tfstate
